# Personal-Projects

./: LICENSE.txt  README.rst  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
src/personal_projects/: __init__.py
src/personal_projects/Brilliant/: coffee_to_theorem.py  hamming_code.py  queens_on_chess_board.py
src/personal_projects/Dijkstra/: dijkstra_class.py  djikstra_class.py  test_nodes.py
src/personal_projects/Div/: Collatz_conjecture.py  abel_konkurranse.py  alpha_beta_pruning.py  bandy.py  compare_vector.py  de_bruijn.py  farey_algorithm.py  feigenbaum.py  newtons_method.py  not_assigning.py  permutations.py  plt_share_axis_ex.py  sierpinski_triangle_turtle.py  sudoku.py  yellowstoneperm.py
src/personal_projects/GUI/: tkinterGUI.py
src/personal_projects/Games/: brownian_sim.py  snake.py
src/personal_projects/Sudoku/: sudoku_solver.ipynb
src/personal_projects/VellemanLABPS3005DN/: SequenceFile.csv  serial_com.py
tests/: __init__.py
