

[metadata]
name = personal_projects
keywords=personal_projects
version = 0.0.1
license = "MIT license",
description = My personal projects that I do for fun
long_description = file: README.rst
author = Petter Bøe Hørtvedt
author_email = petterho@nmbu.no
url=https://github.com/petterho/personal_projects
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where=src



[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:src/personal_projects/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 79


